--- a/.github/workflows/build_windows.yml
+++ b/.github/workflows/build_windows.yml
@@ -22,7 +22,13 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+        pip install matplotlib
         pip install pyinstaller
+    
+    - name: Debug dependencies
+      run: |
+        pip list
+        python -c "import sys; print(sys.path)"
     
     - name: Locate matplotlib
       run: |
