updated hidden dependencies

--- a/.github/workflows/build_windows.yml
+++ b/.github/workflows/build_windows.yml
@@ -25,25 +25,24 @@ jobs:
         pip install pyinstaller
     
     - name: Build with PyInstaller
-      run: |
-        pyinstaller --name="Bird Sound Examiner" --windowed --onefile ^
-        --additional-hooks-dir=. ^
-        --hidden-import matplotlib ^
-        --hidden-import matplotlib.backends.backend_tkagg ^
-        --hidden-import numpy ^
-        --hidden-import librosa ^
-        --hidden-import sounddevice ^
-        --hidden-import tkinter ^
-        --hidden-import shutil ^
-        --collect-submodules librosa ^
-        --collect-submodules numpy ^
-        --collect-submodules sounddevice ^
-        --add-data "C:\hostedtoolcache\windows\Python\3.9.*\x64\Lib\site-packages\librosa;librosa" ^
-        --add-data "C:\hostedtoolcache\windows\Python\3.9.*\x64\Lib\site-packages\numpy;numpy" ^
-        --add-data "C:\hostedtoolcache\windows\Python\3.9.*\x64\Lib\site-packages\sounddevice;sounddevice" ^
-        --noupx ^
-        bird_sounds_filter_app.py
-    
+      run: >-
+        pyinstaller --name="Bird Sound Examiner" --windowed --onefile 
+        --additional-hooks-dir=. 
+        --hidden-import matplotlib 
+        --hidden-import matplotlib.backends.backend_tkagg 
+        --hidden-import numpy 
+        --hidden-import librosa 
+        --hidden-import sounddevice 
+        --hidden-import tkinter 
+        --hidden-import shutil 
+        --collect-submodules librosa 
+        --collect-submodules numpy 
+        --collect-submodules sounddevice 
+        --add-data "${{ runner.tool_cache }}/Python/3.9*/x64/Lib/site-packages/librosa:librosa" 
+        --add-data "${{ runner.tool_cache }}/Python/3.9*/x64/Lib/site-packages/numpy:numpy" 
+        --add-data "${{ runner.tool_cache }}/Python/3.9*/x64/Lib/site-packages/sounddevice:sounddevice" 
+        --noupx 
+        bird_sounds_filter_app.py    
     - name: Upload artifact
       uses: actions/upload-artifact@v2
       with:
