--- a/.github/workflows/build_windows.yml
+++ b/.github/workflows/build_windows.yml
@@ -23,15 +23,18 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
         pip install pyinstaller
-      continue-on-error: false
     
     - name: Verify package installation
       run: |
-        python -m pip freeze
         python -c "import librosa; print('librosa version:', librosa.__version__)"
         python -c "import numpy; print('numpy version:', numpy.__version__)"
         python -c "import sounddevice; print('sounddevice version:', sounddevice.__version__)"
-      continue-on-error: true  # Allow this step to complete even if there's an error
+
+    - name: Find Package Paths
+      run: |
+        echo "LIBROSA_PATH=$(python -c "import librosa; print(librosa.__path__[0])")" >> $env:GITHUB_ENV
+        echo "NUMPY_PATH=$(python -c "import numpy; print(numpy.__path__[0])")" >> $env:GITHUB_ENV
+        echo "SOUNDDEVICE_PATH=$(python -c "import sounddevice; print(sounddevice.__path__[0])")" >> $env:GITHUB_ENV
 
     - name: Build with PyInstaller
       run: >-
@@ -48,9 +51,9 @@ jobs:
         --collect-submodules librosa 
         --collect-submodules numpy 
         --collect-submodules sounddevice 
-        --add-data "C:/path/to/librosa:librosa" 
-        --add-data "C:/path/to/numpy:numpy" 
-        --add-data "C:/path/to/sounddevice:sounddevice" 
+        --add-data "${{ env.LIBROSA_PATH }}:librosa" 
+        --add-data "${{ env.NUMPY_PATH }}:numpy" 
+        --add-data "${{ env.SOUNDDEVICE_PATH }}:sounddevice" 
         --noupx 
         bird_sounds_filter_app.py
     
