--- a/.github/workflows/build_windows.yml
+++ b/.github/workflows/build_windows.yml
@@ -26,10 +26,11 @@ jobs:
     
     - name: Verify package installation
       run: |
+        python -m pip list
         python -c "import librosa; print('librosa version:', librosa.__version__)"
         python -c "import numpy; print('numpy version:', numpy.__version__)"
         python -c "import sounddevice; print('sounddevice version:', sounddevice.__version__)"
-
+    
     - name: Find Package Paths
       run: |
         echo "LIBROSA_PATH=$(python -c "import librosa; print(librosa.__path__[0])")" >> $env:GITHUB_ENV
