--- a/.github/workflows/build_windows.yml
+++ b/.github/workflows/build_windows.yml
@@ -22,7 +22,8 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-        pip install pyinstaller
+        # Install problematic packages separately
+        pip install librosa numpy sounddevice
     
     - name: Verify package installation
       run: |
