--- a/.github/workflows/build_windows.yml
+++ b/.github/workflows/build_windows.yml
@@ -19,6 +19,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+        pip install pyinstaller
         # Install problematic packages separately
         pip install librosa numpy sounddevice
     
