--- a/.github/workflows/build_windows.yml
+++ b/.github/workflows/build_windows.yml
@@ -21,7 +21,7 @@ jobs:
         pip install -r requirements.txt
         pip install pyinstaller
         # Install problematic packages separately
-        pip install librosa numpy sounddevice
+        pip install librosa numpy sounddevice matplotlib
     
     - name: Verify package installation
       run: |
@@ -29,36 +29,35 @@ jobs:
         python -c "import librosa; print('librosa version:', librosa.__version__)"
         python -c "import numpy; print('numpy version:', numpy.__version__)"
         python -c "import sounddevice; print('sounddevice version:', sounddevice.__version__)"
-    
-    - name: Check sounddevice
-      run: |
-        python -c "import sounddevice; print(sounddevice.__file__)"
-        python -c "import sounddevice; print(dir(sounddevice))"
+        python -c "import matplotlib; print('matplotlib version:', matplotlib.__version__)"
     
     - name: Find Package Paths
       run: |
         echo "LIBROSA_PATH=$(python -c "import librosa; print(librosa.__file__)")" >> $env:GITHUB_ENV
         echo "NUMPY_PATH=$(python -c "import numpy; print(numpy.__file__)")" >> $env:GITHUB_ENV
         echo "SOUNDDEVICE_PATH=$(python -c "import sounddevice; print(sounddevice.__file__)")" >> $env:GITHUB_ENV
+        echo "MATPLOTLIB_PATH=$(python -c "import matplotlib; print(matplotlib.__file__)")" >> $env:GITHUB_ENV
     
     - name: Build with PyInstaller
       run: >-
         pyinstaller --name="Bird Sound Examiner" --windowed --onefile 
         --additional-hooks-dir=. 
-        --hidden-import matplotlib 
-        --hidden-import matplotlib.backends.backend_tkagg 
+        --hidden-import matplotlib
+        --hidden-import matplotlib.backends.backend_tkagg
+        --hidden-import matplotlib.pyplot
         --hidden-import numpy 
         --hidden-import librosa 
         --hidden-import sounddevice 
         --hidden-import tkinter 
         --hidden-import shutil 
-        --collect-submodules matplotlib 
+        --collect-all matplotlib
         --collect-submodules librosa 
         --collect-submodules numpy 
         --collect-submodules sounddevice 
         --add-data "${{ env.LIBROSA_PATH }}:librosa" 
         --add-data "${{ env.NUMPY_PATH }}:numpy" 
         --add-data "${{ env.SOUNDDEVICE_PATH }}:sounddevice" 
+        --add-data "${{ env.MATPLOTLIB_PATH }}:matplotlib"
         --add-binary "${{ env.SOUNDDEVICE_PATH }}:sounddevice" 
         --noupx 
         bird_sounds_filter_app.py
