--- a/.github/workflows/build_windows.yml
+++ b/.github/workflows/build_windows.yml
@@ -30,6 +30,11 @@ jobs:
         python -c "import matplotlib; print('matplotlib version:', matplotlib.__version__)"
         python -c "import pyaudio; print('pyaudio version:', pyaudio.__version__)"
 
+    - name: Find PortAudio DLL
+      run: |
+        $portaudioPath = (python -c "import sounddevice as sd; import os; print(os.path.dirname(sd.__file__))")
+        echo "PORTAUDIO_PATH=$portaudioPath" >> $env:GITHUB_ENV
+
     - name: Build with PyInstaller
       run: >-
         pyinstaller --name="Bird Sound Examiner" --windowed --onefile 
@@ -49,7 +54,7 @@ jobs:
         --collect-submodules sounddevice 
         --exclude-module matplotlib.tests
         --exclude-module numpy.f2py.tests
-        --add-binary "$(python -c 'import sounddevice as sd; print(sd._libportaudio_filename)'):./"
+        --add-data "${{ env.PORTAUDIO_PATH }}:."
         bird_sounds_filter_app.py
     
     - name: Upload artifact
