--- a/.github/workflows/build_windows.yml
+++ b/.github/workflows/build_windows.yml
@@ -23,23 +23,13 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
         pip install pyinstaller
-        pip install soundfile
 
-    - name: Verify package installation
+    - name: Locate Package Paths
       run: |
-        python -m pip list
-        python -c "import librosa; print('librosa version:', librosa.__version__)"
-        python -c "import numpy; print('numpy version:', numpy.__version__)"
-        python -c "import sounddevice; print('sounddevice version:', sounddevice.__version__)"
-        python -c "import matplotlib; print('matplotlib version:', matplotlib.__version__)"
-        python -c "import soundfile; print('soundfile version:', soundfile.__version__)"
-
-    - name: Find Package Paths
-      run: |
-        echo "LIBROSA_PATH=$(python -c "import librosa; print(librosa.__file__)")" >> $env:GITHUB_ENV
-        echo "NUMPY_PATH=$(python -c "import numpy; print(numpy.__file__)")" >> $env:GITHUB_ENV
+        echo "LIBROSA_PATH=$(python -c "import librosa; print(librosa.__path__[0])")" >> $env:GITHUB_ENV
+        echo "NUMPY_PATH=$(python -c "import numpy; print(numpy.__path__[0])")" >> $env:GITHUB_ENV
         echo "SOUNDDEVICE_PATH=$(python -c "import sounddevice; print(sounddevice.__file__)")" >> $env:GITHUB_ENV
-        echo "MATPLOTLIB_PATH=$(python -c "import matplotlib; print(matplotlib.__file__)")" >> $env:GITHUB_ENV
+        echo "MATPLOTLIB_PATH=$(python -c "import matplotlib; print(matplotlib.__path__[0])")" >> $env:GITHUB_ENV
         echo "SOUNDFILE_PATH=$(python -c "import soundfile; print(soundfile.__file__)")" >> $env:GITHUB_ENV
 
     - name: Build with PyInstaller
@@ -60,12 +50,11 @@ jobs:
         --collect-submodules numpy 
         --collect-submodules sounddevice
         --collect-submodules soundfile
-        --add-data "${{ env.LIBROSA_PATH }}:librosa" 
-        --add-data "${{ env.NUMPY_PATH }}:numpy" 
-        --add-data "${{ env.SOUNDDEVICE_PATH }}:sounddevice" 
-        --add-data "${{ env.MATPLOTLIB_PATH }}:matplotlib"
-        --add-data "${{ env.SOUNDFILE_PATH }}:soundfile"
-        --add-binary "${{ env.SOUNDDEVICE_PATH }}:sounddevice" 
+        --add-data "${{ env.LIBROSA_PATH }};librosa" 
+        --add-data "${{ env.NUMPY_PATH }};numpy" 
+        --add-data "${{ env.SOUNDDEVICE_PATH }};sounddevice"
+        --add-data "${{ env.MATPLOTLIB_PATH }};matplotlib"
+        --add-data "${{ env.SOUNDFILE_PATH }};soundfile"
         bird_sounds_filter_app.py
     
     - name: Upload artifact
