--- a/requirements.txt
+++ b/requirements.txt
@@ -33,7 +33,5 @@ soxr==0.5.0
 threadpoolctl==3.5.0
 typing_extensions==4.12.2
 urllib3==2.2.2
-soundfile==0.12.1
 pyaudio
-
-
+soundfile==0.10.3.post1
