--- a/.github/workflows/build_windows.yml
+++ b/.github/workflows/build_windows.yml
@@ -23,16 +23,13 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
         pip install pyinstaller
-        pip install librosa numpy sounddevice matplotlib soundfile
 
-    - name: Verify package installation
+    - name: Locate Package Paths
       run: |
-        python -m pip list
-        python -c "import librosa; print('librosa version:', librosa.__version__)"
-        python -c "import numpy; print('numpy version:', numpy.__version__)"
-        python -c "import sounddevice; print('sounddevice version:', sounddevice.__version__)"
-        python -c "import matplotlib; print('matplotlib version:', matplotlib.__version__)"
-        python -c "import soundfile; print('soundfile version:', soundfile.__version__)"
+        echo "LIBROSA_PATH=$(python -c "import librosa; print(librosa.__path__[0])")" >> $env:GITHUB_ENV
+        echo "NUMPY_PATH=$(python -c "import numpy; print(numpy.__path__[0])")" >> $env:GITHUB_ENV
+        echo "MATPLOTLIB_PATH=$(python -c "import matplotlib; print(matplotlib.__path__[0])")" >> $env:GITHUB_ENV
+        echo "SOUNDFILE_PATH=$(python -c "import soundfile; print(soundfile.__file__)")" >> $env:GITHUB_ENV
 
     - name: Build with PyInstaller
       run: >-
@@ -43,15 +40,17 @@ jobs:
         --hidden-import matplotlib.pyplot
         --hidden-import numpy 
         --hidden-import librosa 
-        --hidden-import sounddevice
         --hidden-import soundfile
         --hidden-import tkinter 
         --hidden-import shutil 
         --collect-all matplotlib
         --collect-submodules librosa 
         --collect-submodules numpy 
-        --collect-submodules sounddevice
         --collect-submodules soundfile
+        --add-data "${{ env.LIBROSA_PATH }};librosa" 
+        --add-data "${{ env.NUMPY_PATH }};numpy" 
+        --add-data "${{ env.MATPLOTLIB_PATH }};matplotlib"
+        --add-data "${{ env.SOUNDFILE_PATH }};soundfile"
         bird_sounds_filter_app.py
     
     - name: Upload artifact
