--- a/.github/workflows/build_windows.yml
+++ b/.github/workflows/build_windows.yml
@@ -24,12 +24,13 @@ jobs:
         pip install -r requirements.txt
         pip install pyinstaller
 
-    - name: Locate Package Paths
+    - name: Verify package installation
       run: |
-        echo "LIBROSA_PATH=$(python -c "import librosa; print(librosa.__path__[0])")" >> $env:GITHUB_ENV
-        echo "NUMPY_PATH=$(python -c "import numpy; print(numpy.__path__[0])")" >> $env:GITHUB_ENV
-        echo "MATPLOTLIB_PATH=$(python -c "import matplotlib; print(matplotlib.__path__[0])")" >> $env:GITHUB_ENV
-        echo "SOUNDFILE_PATH=$(python -c "import soundfile; print(soundfile.__file__)")" >> $env:GITHUB_ENV
+        python -m pip list
+        python -c "import librosa; print('librosa version:', librosa.__version__)"
+        python -c "import numpy; print('numpy version:', numpy.__version__)"
+        python -c "import matplotlib; print('matplotlib version:', matplotlib.__version__)"
+        python -c "import soundfile; print('soundfile version:', soundfile.__version__)"
 
     - name: Build with PyInstaller
       run: >-
@@ -47,10 +48,6 @@ jobs:
         --collect-submodules librosa 
         --collect-submodules numpy 
         --collect-submodules soundfile
-        --add-data "${{ env.LIBROSA_PATH }};librosa" 
-        --add-data "${{ env.NUMPY_PATH }};numpy" 
-        --add-data "${{ env.MATPLOTLIB_PATH }};matplotlib"
-        --add-data "${{ env.SOUNDFILE_PATH }};soundfile"
         bird_sounds_filter_app.py
     
     - name: Upload artifact
