--- a/requirements.txt
+++ b/requirements.txt
@@ -32,4 +32,5 @@ threadpoolctl==3.5.0
 typing_extensions==4.12.2
 urllib3==2.2.2
 pyaudio
-soundfile==0.10.3.post1
+sounddevice==0.5.0
+soundfile==0.12.1
