v2 fix windows bug

--- a/.github/workflows/build_windows.yml
+++ b/.github/workflows/build_windows.yml
@@ -24,6 +24,10 @@ jobs:
         pip install -r requirements.txt
         pip install pyinstaller
 
+    - name: Install problematic packages
+      run: |
+        pip install librosa numpy matplotlib soundfile sounddevice
+
     - name: Verify package installation
       run: |
         python -m pip list
