--- a/.github/workflows/build_windows.yml
+++ b/.github/workflows/build_windows.yml
@@ -24,14 +24,19 @@ jobs:
         pip install -r requirements.txt
         pip install pyinstaller
 
+    - name: Download and Install PortAudio
+      run: |
+        $ProgressPreference = 'SilentlyContinue'
+        Invoke-WebRequest -Uri "http://files.portaudio.com/archives/pa_stable_v190700_20210406.tgz" -OutFile "portaudio.tgz"
+        tar -xzvf portaudio.tgz
+        cd portaudio
+        .\configure
+        nmake
+        nmake install
+
     - name: Install problematic packages
       run: |
         pip install librosa numpy matplotlib soundfile sounddevice
-
-    - name: Install PortAudio
-      run: |
-        choco install portaudio
-        echo "C:\Program Files\portaudio\lib" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
 
     - name: Verify package installation
       run: |
@@ -60,7 +65,7 @@ jobs:
         --collect-submodules numpy 
         --collect-submodules soundfile
         --collect-submodules sounddevice
-        --add-binary "C:\Program Files\portaudio\lib\portaudio_x64.dll;."
+        --add-binary "C:\Program Files (x86)\PortAudio\lib\portaudio_x64.dll:."
         bird_sounds_filter_app.py
     
     - name: Upload artifact
