--- a/.github/workflows/build_windows.yml
+++ b/.github/workflows/build_windows.yml
@@ -1,19 +1,22 @@
 name: Build Windows Executable
+
 on:
   push:
     branches: [ main ]
   pull_request:
     branches: [ main ]
+
 jobs:
   build:
     runs-on: windows-latest
+
     steps:
     - uses: actions/checkout@v2
     
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: '3.12'
+        python-version: '3.9'
     
     - name: Install dependencies
       run: |
@@ -21,42 +24,9 @@ jobs:
         pip install -r requirements.txt
         pip install pyinstaller
 
-    - name: Verify package installation
-      run: |
-        python -m pip list
-        python -c "import librosa; print('librosa version:', librosa.__version__)"
-        python -c "import numpy; print('numpy version:', numpy.__version__)"
-        python -c "import sounddevice; print('sounddevice version:', sounddevice.__version__)"
-        python -c "import matplotlib; print('matplotlib version:', matplotlib.__version__)"
-        python -c "import pyaudio; print('pyaudio version:', pyaudio.__version__)"
-
-    - name: Find PortAudio DLL
-      run: |
-        $portaudioPath = (python -c "import sounddevice as sd; import os; print(os.path.dirname(sd.__file__))")
-        echo "PORTAUDIO_PATH=$portaudioPath" >> $env:GITHUB_ENV
-
     - name: Build with PyInstaller
-      run: >-
-        pyinstaller --name="Bird Sound Examiner" --windowed --onefile 
-        --additional-hooks-dir=. 
-        --hidden-import matplotlib
-        --hidden-import matplotlib.backends.backend_tkagg
-        --hidden-import matplotlib.pyplot
-        --hidden-import numpy 
-        --hidden-import librosa 
-        --hidden-import sounddevice 
-        --hidden-import tkinter 
-        --hidden-import shutil 
-        --hidden-import pyaudio
-        --collect-all matplotlib
-        --collect-submodules librosa 
-        --collect-submodules numpy 
-        --collect-submodules sounddevice 
-        --exclude-module matplotlib.tests
-        --exclude-module numpy.f2py.tests
-        --add-data "${{ env.PORTAUDIO_PATH }}:."
-        bird_sounds_filter_app.py
-    
+      run: pyinstaller --name="Bird Sound Examiner" --windowed --onefile bird_sounds_filter_app.py
+
     - name: Upload artifact
       uses: actions/upload-artifact@v2
       with:
