--- a/.github/workflows/build_windows.yml
+++ b/.github/workflows/build_windows.yml
@@ -22,13 +22,14 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-        pip install pyinstaller matplotlib numpy librosa soundfile
+        pip install pyinstaller matplotlib numpy librosa soundfile sounddevice
 
     - name: Debug Info
       run: |
         python -c "import sys; print(sys.executable)"
         python -c "import matplotlib; print(matplotlib.__file__)"
         python -c "import matplotlib; print(matplotlib.get_data_path())"
+        python -c "import sounddevice; print(sounddevice.__file__)"
 
     - name: Build with PyInstaller
       run: |
@@ -40,6 +41,7 @@ jobs:
           --hidden-import numpy `
           --hidden-import librosa `
           --hidden-import soundfile `
+          --hidden-import sounddevice `
           --add-data "$matplotlibDataPath;matplotlib" `
           bird_sounds_filter_app.py
 
