--- a/.github/workflows/macos-build.yml
+++ b/.github/workflows/macos-build.yml
@@ -26,7 +26,7 @@ jobs:
     
     - name: Build with PyInstaller
       run: |
-        pyinstaller --name="BirdSoundExaminer" --windowed --onefile your_script.py
+        pyinstaller --name="BirdSoundExaminer" --windowed --onefile bird_sounds_filter_app.py
     
     - name: Create DMG
       run: |
