--- a/.github/workflows/macos-build.yml
+++ b/.github/workflows/macos-build.yml
@@ -11,10 +11,10 @@ jobs:
     runs-on: macos-latest
     
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
     
     - name: Set up Python
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v4
       with:
         python-version: '3.9'
     
@@ -28,17 +28,28 @@ jobs:
       run: |
         pyinstaller --name="BirdSoundExaminer" --windowed --onefile bird_sounds_filter_app.py
     
+    - name: Check disk space
+      run: df -h
+    
+    - name: Clean up disk space
+      run: |
+        sudo rm -rf /usr/local/lib/android
+        df -h
+    
     - name: Create DMG
       run: |
-        # Clean up space
-    	df -h
-    	sudo rm -rf /usr/local/lib/android
-    	df -h
+        hdiutil create -size 200m -volname "BirdSoundExaminer" -srcfolder dist/BirdSoundExaminer.app -ov -format UDZO BirdSoundExaminer.dmg
     
-    	# Create a DMG with a specific size
-    	hdiutil create -size 100m -volname "BirdSoundExaminer" -srcfolder dist/BirdSoundExaminer.app -ov -format UDZO BirdSoundExaminer.dmg    
     - name: Upload artifact
-      uses: actions/upload-artifact@v2
+      uses: actions/upload-artifact@v3
       with:
         name: BirdSoundExaminer
         path: BirdSoundExaminer.dmg
+    
+    - name: Release
+      uses: softprops/action-gh-release@v1
+      if: startsWith(github.ref, 'refs/tags/')
+      with:
+        files: BirdSoundExaminer.dmg
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
