--- a/.github/workflows/macos-build.yml
+++ b/.github/workflows/macos-build.yml
@@ -10,7 +10,11 @@ jobs:
   build:
     strategy:
       matrix:
-        arch: [x86_64, arm64]
+        include:
+          - arch: x86_64
+            python-version: '3.9'
+          - arch: arm64
+            python-version: '3.9'
     runs-on: macos-latest
     
     steps:
@@ -19,7 +23,8 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
-        python-version: '3.9'
+        python-version: ${{ matrix.python-version }}
+        architecture: ${{ matrix.arch }}
     
     - name: Install dependencies
       run: |
@@ -35,7 +40,7 @@ jobs:
                     --windowed \
                     --onefile \
                     --target-arch ${{ matrix.arch }} \
-                    --osx-bundle-identifier "com.yourdomain.birdsoundexaminer" \
+                    --osx-bundle-identifier "com.yuvmirk.birdsoundexaminer" \
                     bird_sounds_filter_app.py
     
     - name: Create DMG
